# ochna

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  SKILL.md  flake.nix  go.mod  go.sum  main.py  ochna.go  pyproject.toml
.agents/skills/ochna/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: benchmark.sh
cmd/: cmd.go  help.go  progress.go  yandere.go
docs/: agent-ergonomics-plan.md  call-resolution-dataflow-plan.md  ochna-levelup-from-hpa-dive.md  performance-audit.md
docs/dives/: kubernetes-hpa.md
docs/experiments/: kubernetes-pr-139848.md  linux-strncpy-removal.md  netty-pr-16959.md
java_mock_test/: MockApp.java
lib/random/: random.go
pkg/seed/: seed.go  seed_other.go
pyscripts/: corpus_probes.py  pr_feature_report.py  report.py  verify_clis.py
scripts/: report.sh
src/: commands.rs  db.rs  main.rs  parser.rs
src/commands/: index.rs  query.rs  status.rs
src/db/: edges.rs  files.rs  nodes.rs  raw_calls.rs  refs.rs  schema.rs
src/parser/: c_like.rs  common.rs  go.rs  interner.rs  java.rs  resolve.rs  rust.rs  zig.rs
tests/fixtures/mixed_languages/: .gitignore  main.c  main.cpp  main.zig
