[package]
name = "ochna"
version = "0.0.2"
edition = "2021"
description = "A structural code graph indexing and analysis CLI using Tree-sitter and SQLite"
license = "Apache-2.0"
repository = "https://github.com/azusachino/ochna"
homepage = "https://github.com/azusachino/ochna"
readme = "README.md"
keywords = ["codebase", "tree-sitter", "ast", "sqlite", "graph"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "/clones",
    "/java_mock_test",
    "/.ochna",
    "/.github",
    "/benches",
    "/flake.lock",
    "/flake.nix",
    "/Makefile",
    "/pyproject.toml",
    "/pyscripts",
    "/.python-version",
    "/uv.lock",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
