[package]
name = "ochna"
version = "0.1.1"
edition = "2021"
description = "A structural code graph indexing and analysis CLI using Tree-sitter and SQLite"
license = "Apache-2.0"
repository = "https://github.com/azusachino/ochna"
homepage = "https://github.com/azusachino/ochna"
readme = "README.md"
keywords = ["codebase", "tree-sitter", "ast", "sqlite", "graph"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "/clones",
    "/java_mock_test",
    "/.ochna",
    "/.github",
    "/benches",
    "/flake.lock",
    "/flake.nix",
    "/Makefile",
    "/pyproject.toml",
    "/pyscripts",
    "/.python-version",
    "/uv.lock",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
rustc-hash = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-zig = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
